--- a/ProjetoBackend/Views/ItensVendas/Index.cshtml
+++ b/ProjetoBackend/Views/ItensVendas/Index.cshtml
@@ -5,12 +5,12 @@
     var idVendaAtual = ViewData["idVendaAtual"];
 }
 
-<h1>Index</h1>
+<h1>Vendas</h1>
 
 <p>
     <a asp-action="Create" asp-route-id="@idVendaAtual">Create New</a>
 </p>
-<table class="table">
+<table class="table table-dark table-responsive">
     <thead>
         <tr>
             <th>
@@ -51,9 +51,12 @@
                     @Html.DisplayFor(modelItem => item.ValorTotal)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.ItemVendaId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.ItemVendaId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.ItemVendaId">Delete</a>
+                    <div class=" btn btn-outline-primary">
+                        <a asp-action="Edit" asp-route-id="@item.ItemVendaId" class="text-primary text-decoration-none">Editar</a>
+                    </div>
+                    <div class="btn btn-outline-danger">
+                        <a asp-action="Delete" asp-route-id="@item.ItemVendaId" class="text-danger text-decoration-none">Delete</a>
+                    </div>
                 </td>
             </tr>
         }
