--- a/ProjetoBackend/Views/Servicos/Index.cshtml
+++ b/ProjetoBackend/Views/Servicos/Index.cshtml
@@ -4,12 +4,14 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Serviços</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <div class="btn btn-lg" style=" background:#DC5F00">
+        <a asp-action="Create" class="text-decoration-none text-light">Cadastrar</a>
+    </div>
 </p>
-<table class="table">
+<table class="table table-dark table-responsive">
     <thead>
         <tr>
             <th>
@@ -22,20 +24,25 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ValorServico)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ServicoId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ServicoId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ServicoId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ValorServico)
+                </td>
+                <td>
+                    <div class=" btn btn-outline-primary">
+                        <a asp-action="Edit" asp-route-id="@item.ServicoId" class="text-primary text-decoration-none">Editar</a>
+                    </div>
+
+                    <div class="btn btn-outline-danger">
+                        <a asp-action="Delete" asp-route-id="@item.ServicoId" class="text-danger text-decoration-none">Delete</a>
+                    </div>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
