--- a/ProjetoBackend/Views/ItensVendas/Index.cshtml
+++ b/ProjetoBackend/Views/ItensVendas/Index.cshtml
@@ -8,7 +8,9 @@
 <h1>Vendas</h1>
 
 <p>
-    <a asp-action="Create" asp-route-id="@idVendaAtual">Create New</a>
+    <div class="btn btn-lg" style=" background:#DC5F00">
+        <a asp-action="Create" class="text-decoration-none text-light">Cadastrar</a>
+    </div>
 </p>
 <table class="table table-dark table-responsive">
     <thead>
