--- a/ProjetoBackend/Views/Vendas/Edit.cshtml
+++ b/ProjetoBackend/Views/Vendas/Edit.cshtml
@@ -4,46 +4,66 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Editar Vendas</h1>
 
-<h4>Venda</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="row  justify-content-center" ">
+    <div class="col-md-8>
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="VendaId" />
-            <div class="form-group">
-                <label asp-for="NotaFiscal" class="control-label"></label>
-                <input asp-for="NotaFiscal" class="form-control" />
-                <span asp-validation-for="NotaFiscal" class="text-danger"></span>
+            <div class="row">
+                <div class="col-12 col-md-8 mt-2">
+
+                    <div class="form-group">
+                        <label asp-for="NotaFiscal" class="control-label"></label>
+                        <input asp-for="NotaFiscal" class="form-control" />
+                        <span asp-validation-for="NotaFiscal" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-12 col-md mt-2">
+                    <div class="col-12 col-md-8 mt-2"></div>
+                    <div class="form-group">
+                        <label asp-for="ClienteId" class="control-label"></label>
+                        <select asp-for="ClienteId" class="form-control" asp-items="ViewBag.ClienteId"></select>
+                        <span asp-validation-for="ClienteId" class="text-danger"></span>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="ClienteId" class="control-label"></label>
-                <select asp-for="ClienteId" class="form-control" asp-items="ViewBag.ClienteId"></select>
-                <span asp-validation-for="ClienteId" class="text-danger"></span>
+            <div class="row">
+                <div class="col-12 col-md-8 mt-2">
+                    <div class="form-group">
+                        <label asp-for="DataVenda" class="control-label"></label>
+                        <input asp-for="DataVenda" class="form-control" />
+                        <span asp-validation-for="DataVenda" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-12 col-md mt-2">
+                    <div class="form-group">
+                        <label asp-for="ValorTotal" class="control-label"></label>
+                        <input asp-for="ValorTotal" class="form-control" />
+                        <span asp-validation-for="ValorTotal" class="text-danger"></span>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="DataVenda" class="control-label"></label>
-                <input asp-for="DataVenda" class="form-control" />
-                <span asp-validation-for="DataVenda" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ValorTotal" class="control-label"></label>
-                <input asp-for="ValorTotal" class="form-control" />
-                <span asp-validation-for="ValorTotal" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="row">
+                <div class="col-12 col-md mt-2">
+                    <div class="btn btn-outline-danger w-100">
+                        <a asp-action="Index" class="text-danger text-decoration-none">Cancelar</a>
+                    </div>
+                </div>
+                <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
+                <div class="col-12 col-md mt-2">
+                    <div class="form-group">
+                        <input type="submit" value="Salvar" class="btn btn-primary w-100" />
+                    </div>
+                </div>
             </div>
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
