--- a/ProjetoBackend/Views/Vendas/Index.cshtml
+++ b/ProjetoBackend/Views/Vendas/Index.cshtml
@@ -4,12 +4,14 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Vendas</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <div class="btn btn-lg" style=" background:#DC5F00">
+        <a asp-action="Create" class="text-decoration-none text-light">Cadastrar</a>
+    </div>
 </p>
-<table class="table">
+<table class="table table-dark table-responsive">
     <thead>
         <tr>
             <th>
@@ -44,11 +46,19 @@
                     @Html.DisplayFor(modelItem => item.ValorTotal)
                 </td>
                 <td>
-                    <a asp-controller="ItensVendas" asp-action="Index" asp-route-id="@item.VendaId">Produtos</a> |
-                    <a asp-controller="ServicosVendas" asp-action="Index" asp-route-id="@item.VendaId">Serviços</a> |
-                    <a asp-action="Edit" asp-route-id="@item.VendaId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.VendaId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.VendaId">Delete</a>
+                    <div class="btn btn-outline-info">
+                        <a asp-controller="ItensVendas" asp-action="Index" asp-route-id="@item.VendaId" class="text-info text-decoration-none">Produtos</a>
+                    </div>
+                    <div class="btn btn-outline-success">
+                        <a asp-controller="ServicosVendas" asp-action="Index" asp-route-id="@item.VendaId" class="text-success text-decoration-none">Serviços</a>
+                    </div>
+                    <div class=" btn btn-outline-primary">
+                        <a asp-action="Edit" asp-route-id="@item.VendaId" class="text-primary text-decoration-none">Editar</a>
+                    </div>
+
+                    <div class="btn btn-outline-danger">
+                        <a asp-action="Delete" asp-route-id="@item.VendaId" class="text-danger text-decoration-none">Delete</a>
+                    </div>
                 </td>
             </tr>
         }
