--- a/ProjetoBackend/Views/Shared/_LoginPartial.cshtml
+++ b/ProjetoBackend/Views/Shared/_LoginPartial.cshtml
@@ -2,6 +2,39 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
+<ul class="navbar-nav flex-grow-1 ">
+    <li class="nav-item">
+        <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Pagina Inicial</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Sobre">Sobre Nós</a>
+    </li>
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <li class="nav-item">
+            <a class="nav-link text-light" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-light" asp-area="" asp-controller="Fornecedors" asp-action="Index">Fornecedores</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-light" asp-area="" asp-controller="Categorias" asp-action="Index">Categorias de Produtos</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-light" asp-area="" asp-controller="Produtos" asp-action="Index">Produtos</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-light" asp-area="" asp-controller="Servicos" asp-action="Index">Serviços</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-light" asp-area="" asp-controller="Vendas" asp-action="Index">Vendas</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-light" asp-area="" asp-controller="Compras" asp-action="Index">Compras</a>
+        </li>
+    }
+</ul>
+
 <ul class="navbar-nav gap-4">
     @if (SignInManager.IsSignedIn(User))
     {
