--- a/ProjetoBackend/Views/Vendas/Create.cshtml
+++ b/ProjetoBackend/Views/Vendas/Create.cshtml
@@ -4,47 +4,55 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
-<h4>Venda</h4>
+<h4>Criar Venda</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="row justify-content-center">
+    <div class="col-md-8">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="row">
+                <div class="col-12 col-md-6 mt-2">
+                    <div class="form-group">
+                        <label asp-for="ClienteId" class="control-label"></label>
+                        <select asp-for="ClienteId" class="form-control" asp-items="ViewBag.ClienteId"></select>
+                    </div>
+                </div>
+                <div class="col-12 col-md mt-2">
+                    <div class="form-group">
+                        <label asp-for="ValorTotal" class="control-label"></label>
+                        <input asp-for="ValorTotal" readonly="readonly" value="0.00" class="form-control" />
+                    </div>
+                </div>
+            </div>
             <div class="form-group">
 
 
                 <input type="hidden" asp-for="NotaFiscal" class="form-control" />
 
             </div>
-            <div class="form-group">
-                <label asp-for="ClienteId" class="control-label"></label>
-                <select asp-for="ClienteId" class="form-control" asp-items="ViewBag.ClienteId"></select>
-            </div>
+
             <div class="form-group">
 
                 <input type="hidden" asp-for="DataVenda" class="form-control" />
 
             </div>
+
             <div class="form-group">
-                <label asp-for="ValorTotal" class="control-label"></label>
-                <input asp-for="ValorTotal" readonly="readonly" value="0.00" class="form-control" />
+                <input type="submit" value="Criar" class="btn btn-primary" />
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+
+            <div>
+                <a asp-action="Index">Voltar</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
-       
+
     }
 }
