--- a/ProjetoBackend/Views/Fornecedors/Index.cshtml
+++ b/ProjetoBackend/Views/Fornecedors/Index.cshtml
@@ -3,57 +3,59 @@
 @{
     ViewData["Title"] = "Index";
 }
+<div class="container">
 
-<h1>Fornecedores</h1>
+    <h1>Fornecedores</h1>
 
-<p>
-    <div class="btn btn-lg" style=" background:#DC5F00">
-        <a asp-action="Create" class="text-decoration-none text-light">Cadastrar</a>
-    </div>
-</p>
-<table class="table table-dark talbe-responsive">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Nome)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Celular)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CnpjCpf)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+    <p>
+        <div class="btn btn-lg btn-1">
+            <a asp-action="Create" class="text-decoration-none text-light">Cadastrar</a>
+        </div>
+    </p>
+    <table class="table table-dark talbe-responsive">
+        <thead>
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Celular)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CnpjCpf)
-                </td>
-                <td>
-                    <div class="btn btn-outline-primary">
-                        <a asp-action="Edit" asp-route-id="@item.FornecedorId" class="text-primary text-decoration-none">Editar</a>
-                    </div>
-                    <div class="btn btn-outline-danger">
-                        <a asp-action="Delete" asp-route-id="@item.FornecedorId" class="text-danger text-decoration-none">Deletar</a>
-                    </div>
-                </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.Nome)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Email)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Celular)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.CnpjCpf)
+                </th>
+                <th></th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Nome)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Celular)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CnpjCpf)
+                    </td>
+                    <td>
+                        <div class="btn btn-outline-primary">
+                            <a asp-action="Edit" asp-route-id="@item.FornecedorId" class="text-primary text-decoration-none">Editar</a>
+                        </div>
+                        <div class="btn btn-outline-danger">
+                            <a asp-action="Delete" asp-route-id="@item.FornecedorId" class="text-danger text-decoration-none">Deletar</a>
+                        </div>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
